2023-07-10T16:17:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510449579 # 978
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 11 19
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 121 146
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 122 147
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-10]

2023-07-10T01:15:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5502975585 # 976
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
* notice: last 14d: unq all: 10 18
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 120 145
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 121 146
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-09]

2023-07-09T08:14:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5498830706 # 974
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-09
* notice: last 14d: unq all: 9 17
* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 119 144
* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 120 145
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-09]

2023-07-08T08:15:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5493483140 # 971