@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-10T16:17:27Z",
+  "timestamp" : "2023-07-11T08:16:52Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 147,
-  "uniques" : 122,
+  "count" : 148,
+  "uniques" : 123,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
