@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 11,
   "clones": [
     {
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
