@@ -1,3 +1,12 @@
+2023-07-11T08:16:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5517495224 # 980
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-11
+* notice: last 14d: unq all: 11 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 122 147
+* notice: next accum: outdated-unq outdated-all / unq all: 108 128 / 123 148
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-07-11]
+
 2023-07-10T16:17:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510449579 # 978
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
